crux-mir/test/symb_eval/crux/mixed_fail.good
test mixed_fail/<DISAMB>::fail1[0]: [Crux] Attempting to prove verification conditions.
FAILED
test mixed_fail/<DISAMB>::fail2[0]: [Crux] Attempting to prove verification conditions.
FAILED
test mixed_fail/<DISAMB>::pass1[0]: [Crux] Attempting to prove verification conditions.
ok
test mixed_fail/<DISAMB>::pass2[0]: [Crux] Attempting to prove verification conditions.
ok

failures:

---- mixed_fail/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/mixed_fail.rs:8:22: 8:27: error: in mixed_fail/<DISAMB>::fail1[0]
[Crux]   attempt to compute `copy _1 + const 1_u8`, which would overflow
[Crux]   Context:
[Crux]     test/symb_eval/crux/mixed_fail.rs:8:22: 8:27: mixed_fail/<DISAMB>::fail1[0]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/crux/mixed_fail.rs:8:5: 8:32: error: in mixed_fail/<DISAMB>::fail1[0]
[Crux]   MIR assertion at test/symb_eval/crux/mixed_fail.rs:8:5:
[Crux]   	x + 1 > x

---- mixed_fail/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/mixed_fail.rs:14:22: 14:27: error: in mixed_fail/<DISAMB>::fail2[0]
[Crux]   attempt to compute `copy _1 + const 2_u8`, which would overflow
[Crux]   Context:
[Crux]     test/symb_eval/crux/mixed_fail.rs:14:22: 14:27: mixed_fail/<DISAMB>::fail2[0]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/crux/mixed_fail.rs:14:5: 14:32: error: in mixed_fail/<DISAMB>::fail2[0]
[Crux]   MIR assertion at test/symb_eval/crux/mixed_fail.rs:14:5:
[Crux]   	x + 2 > x

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 6
[Crux]   Proved: 2
[Crux]   Disproved: 4
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
